tests/baselines/reference/_co-arrayMapOverload.errors.txt
_co-arrayMapOverload.ts(19,11): error TS2345: Argument of type '(x: number) => number' is not assignable to parameter of type '((value: string, index: number, array: string[]) => number) & ((value: number, index: number, array: number[]) => number)'.
  Type '(x: number) => number' is not assignable to type '(value: string, index: number, array: string[]) => number'.
    Types of parameters 'x' and 'value' are incompatible.
      Type 'string' is not assignable to type 'number'.
_co-arrayMapOverload.ts(21,11): error TS2345: Argument of type '{ (x: string): string; (x: number): number; }' is not assignable to parameter of type '((value: string, index: number, array: string[]) => number) & ((value: number, index: number, array: number[]) => number)'.
  Type '{ (x: string): string; (x: number): number; }' is not assignable to type '(value: string, index: number, array: string[]) => number'.
    Type 'string' is not assignable to type 'number'.
_co-arrayMapOverload.ts(23,11): error TS2345: Argument of type '{ (x: string): string; (x: number): number; }' is not assignable to parameter of type '((value: string, index: number, array: string[]) => number) & ((value: number, index: number, array: number[]) => number)'.


==== _co-arrayMapOverload.ts (3 errors) ====
    declare const arrsn : string[]|number[];
    declare function strmapol(x:string):string;
    declare function strmapol(x:number):number;
    //declare function strmap(x:number|string):number|string;
    
    declare function strmapgen<T extends string|number>(x:T):T;
    
    //type ID = <I>() => (i: I) => I;
    
    declare const fstrmapgen: <T extends string|number>()=>(x:T)=>T;
    
    const fstrmapol = ()=>strmapol;
    
    
    
    
    arrsn.map(strmapgen); // 5.2.2. no error
    
    arrsn.map(fstrmapgen()); // 5.2.2. error
              ~~~~~~~~~~~~
!!! error TS2345: Argument of type '(x: number) => number' is not assignable to parameter of type '((value: string, index: number, array: string[]) => number) & ((value: number, index: number, array: number[]) => number)'.
!!! error TS2345:   Type '(x: number) => number' is not assignable to type '(value: string, index: number, array: string[]) => number'.
!!! error TS2345:     Types of parameters 'x' and 'value' are incompatible.
!!! error TS2345:       Type 'string' is not assignable to type 'number'.
    
    arrsn.map(strmapol); // 5.2.2 error
              ~~~~~~~~
!!! error TS2345: Argument of type '{ (x: string): string; (x: number): number; }' is not assignable to parameter of type '((value: string, index: number, array: string[]) => number) & ((value: number, index: number, array: number[]) => number)'.
!!! error TS2345:   Type '{ (x: string): string; (x: number): number; }' is not assignable to type '(value: string, index: number, array: string[]) => number'.
!!! error TS2345:     Type 'string' is not assignable to type 'number'.
    
    arrsn.map(fstrmapol()); // 5.2.2. error
              ~~~~~~~~~~~
!!! error TS2345: Argument of type '{ (x: string): string; (x: number): number; }' is not assignable to parameter of type '((value: string, index: number, array: string[]) => number) & ((value: number, index: number, array: number[]) => number)'.